# ortools-learn

./: 01_linear_optimization.ipynb  01_main.py  02_integer_optimization.ipynb  03_constraint_optimization.ipynb  04_real_world.ipynb  05_scheduling.ipynb  06_swimming.ipynb  07_cargo.ipynb  08_stable_marriage.ipynb  09_assignment.ipynb  employee-matchin.ipynb  employee-scheduling.ipynb  linear_optimization.v2.ipynb  pyproject.toml  sudoku.ipynb
.ipynb_checkpoints/: 03_constraint_optimization-checkpoint.ipynb  optimal-grouping-checkpoint.ipynb  sudoku-checkpoint.ipynb
