[tool.poetry]
name = "ortools-learn"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ortools = "^9.8.3296"
jupyterlab = "^4.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
